Update to file