@@ -1,6 +1,5 @@
 package uk.gov.hmcts.ccd.definition.store.rest.endpoint;
 
-import com.google.common.collect.ImmutableMap;
 import org.hibernate.exception.ConstraintViolationException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -13,12 +12,13 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 import uk.gov.hmcts.ccd.definition.store.domain.exception.BadRequestException;
+import uk.gov.hmcts.ccd.definition.store.domain.exception.ForbiddenException;
 import uk.gov.hmcts.ccd.definition.store.domain.exception.NotFoundException;
 import uk.gov.hmcts.ccd.definition.store.domain.service.legacyvalidation.CaseTypeValidationException;
 import uk.gov.hmcts.ccd.definition.store.elastic.exception.ElasticSearchInitialisationException;
 import uk.gov.hmcts.ccd.definition.store.rest.endpoint.exceptions.DuplicateFoundException;
-import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import javax.persistence.OptimisticLockException;
 import javax.persistence.PersistenceException;
@@ -28,8 +28,9 @@ import java.util.Set;
 
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.HttpStatus.CONFLICT;
-import static org.springframework.http.HttpStatus.NOT_FOUND;
+import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
+import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @RestControllerAdvice
 class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
@@ -60,7 +61,7 @@ class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     @ExceptionHandler(value = {ConstraintViolationException.class})
-    public ResponseEntity<Object> handleConstraintVioldation(ConstraintViolationException ex, WebRequest request) {
+    public ResponseEntity<Object> handleConstraintViolation(ConstraintViolationException ex, WebRequest request) {
         log(ex);
         return handleExceptionInternal(ex, flattenExceptionMessages(ex), new HttpHeaders(),
             HttpStatus.CONFLICT, request);
@@ -71,6 +72,14 @@ class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
         log(ex);
         return handleExceptionInternal(ex, flattenExceptionMessages(ex), new HttpHeaders(),
             HttpStatus.BAD_REQUEST, request);
+    }
+
+    @ExceptionHandler(value = {ForbiddenException.class})
+    @ResponseStatus(code = FORBIDDEN)
+    @ResponseBody
+    Map<String, String> handleForbiddenAccess(ForbiddenException e) {
+        log(e);
+        return getMessage(e, "Unauthorised access to:%s");
     }
 
     @ExceptionHandler(NotFoundException.class)
@@ -135,7 +144,7 @@ class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     private Map<String, String> getMessage(Throwable e, String message) {
-        return ImmutableMap.of("message", String.format(message, e.getMessage()));
+        return Map.of("message", String.format(message, e.getMessage()));
     }
 
     private String getMessagesAstring(Set<String> messages) {
